# autocliquer

./: .gitignore  Makefile.am  configure.ac  libcliquer.pc.in
.github/workflows/: c-cpp.yml
include/: Makefile.am
include/cliquer/: cliquer.h  graph.h  misc.h  reorder.h  set.h
lib/: Makefile.am  cliquer.c  graph.c  reorder.c
src/: Makefile.am  cl.c
test/: Makefile.am  testcases.c  testcases_wrapper.sh
